--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,8 @@ description = "EIRTeam game deployment tool"
 [dependencies]
 clap = { version = "4.4.2", features = ["derive"] }
 config = "0.13.3"
+gix = "0.62.0"
 serde = "1.0.188"
 serde_derive = "1.0.188"
+serde_json = "1.0.117"
 tinytemplate = "1.2.1"
